--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^21.1.0",
     "firebase": "^12.8.0",
     "jszip": "^3.10.1",
+    "pica": "^9.0.1",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
@@ -40,6 +41,7 @@
     "@angular/cli": "^21.1.2",
     "@angular/compiler-cli": "^21.1.0",
     "@types/jszip": "^3.4.0",
+    "@types/pica": "^9.0.5",
     "@types/qrcode": "^1.5.6",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
